# law-chatbot

./: .env.example  .vercelignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt  run.py  vercel.json
app/: config.py  document_processor.py  embbeding.py  enhanced_rag_agent.py  main.py  rag_agent.txt  simple_rag_agent.py
data/: TRỤ SỞ TỈNH VĨNH LONG.md  Tên_gọi_mới_-_thẩm_quyền_theo_lãnh_thổ_-_kế_thừa_quyền_của_355_vks_khu_vực.md  trụ sở Hà Tĩnh.md  trụ sở Sơn La.md  trụ sở khu vực Bắc Ninh.md  trụ sở làm việc VKS Tuyên Quang.md  trụ sở làm việc VKS phúc thẩm HCM.md  trụ sở làm việc VKSND.md  trụ sở tỉnh Lai Châu .md  trụ sở tỉnh Ninh Bình.md  trụ sở Điện Biên.md  địa chỉ, trụ sở làm việc VKS Cần Thơ.md
raw_data_md/: A24.2_Dt_Luat_sdbsmsd_cua_Luat_To_chuc_VKSND.md  rules.md
raw_data_md/Luật_sửa_đổi,_bổ_sung_một_số_điều_Luật_Tổ_chức_Viện_kiểm_sát_nhân_dân/: A24.1_TTr16-VKSTC_DA_Luat_sdbsmsd_Luat_To_chuc_VKSND.md  A24.3_Bang_so_sanh_dt_Luat.md  A24.4_Ban_tong_hop_ttgtyk_gop_y_doi_voi_DA_Luat.md
raw_data_md/Luật_sửa_đổi,_bổ_sung_một_số_điều_của_Bộ_luật_Tố_tụng_hình_sự/: A32.1_TTr18-VKSTC_DA_Luat_sdbsmsd_cua_Bo_Luat_TTHS.md  A32.2_Dt_Luat_sdbs_msd_cua_Bo_luat_TTHS.md  A32.3_So_sanh_dt_Luat_sdbsmsd_Bo_Luat_TTHS.md  A32.4_Tong_hop_ttgtyk_gop_y.md
raw_data_md/Luật_tổ_chức_cơ_quan_điều_tra_hình_sự/: A33.1_TTr199-CP_DA_Luat_To_chuc_CQĐT_hinh_su.md  A33.2_TTr200-CP_tom_tat_To_trinh_du_an_Luat_TCCQĐTHS.md  A33.3_Du_thao_Luat_TCCQĐTHS.md  A33.4_Ban_So_sanh_Luat.md  (+5 more)
static/: style.css
templates/: convert.html  explorer.html  index.html
(+7 files in other folders)
